tests/derive/not_entities.stderr
error: Not will only work with component storages refered by &T or &mut T
 --> $DIR/not_entities.rs:4:15
  |
4 | fn run(_: Not<Entities>) {}
  |               ^^^^^^^^
